--- a/languages/ja-JP.ini
+++ b/languages/ja-JP.ini
@@ -20,7 +20,7 @@ Folder = フォルダ
 Directory = ディレクトリ
 Background = 目录背景
 Desktop = 桌面背景
-Drive = 磁盘分区
+Drive = ディスク
 AllObjects = 所有对象
 Computer = 此电脑
 RecycleBin = 回收站
