--- a/languages/ja-JP.ini
+++ b/languages/ja-JP.ini
@@ -16,184 +16,184 @@ About = ヘルプ
 
 [SideBar]
 File = ファイル
-Folder = フォルダ
+Folder = フォルダー
 Directory = ディレクトリ
-Background = 目录背景
-Desktop = 桌面背景
+Background = ディレクトリ背景
+Desktop = デスクトップ背景
 Drive = ディスク
-AllObjects = 所有对象
-Computer = 此电脑
-RecycleBin = 回收站
-Library = 库
-New = 新建菜单
-SendTo = 发送到
-OpenWith = 打开方式
+AllObjects = すべてのオブジェクト
+Computer = PC
+RecycleBin = ごみ箱
+Library = ライブラリ
+New = 新規作成
+SendTo = 送る
+OpenWith = 開く
 WinX = Win+X
 
-LnkFile = lnk文件
+LnkFile = lnkファイル
 UwpLnk = uwp lnk
-ExeFile = exe文件
-TextFile = 文本文件
-ImageFile = 图像文件
-VideoFile = 视频文件
-AudioFile = 音频文件
-ImageDirectory = 图像目录
-VideoDirectory = 视频目录
-AudioDirectory = 音频目录
-UnknownType = 未知格式
-CustomType = 自选格式
+ExeFile = アプリケーション
+TextFile = テキストファイル
+ImageFile = イメージファイル
+VideoFile = ビデオファイル
+AudioFile = オーディオファイル
+ImageDirectory = イメージディレクトリ
+VideoDirectory = ビデオディレクトリ
+AudioDirectory = オーディオディレクトリ
+UnknownType = 不明な形式
+CustomType = カスタムフォーマット
 
-GuidBlocked = GUID锁
-ThirdRules = 三方规则
+GuidBlocked = GUIDロック
+ThirdRules = 第三者のルール
 
-AboutApp = 关于程序
-Dictionaries = 程序字典
-AppLanguage = 程序语言
-Donate = 捐赠作者
+AboutApp = ソフト情報
+Dictionaries = プログラムディレクトリ
+AppLanguage = 言語
+Donate = Donate
 
 [StatusBar]
-File = 所有类型文件的右键菜单
-Folder = 所有文件夹的右键菜单
-Directory = 所有文件目录的右键菜单
-Background = 所有目录背景和桌面背景的右键菜单
-Desktop = 桌面背景右键菜单
-Drive = 所有磁盘驱动器的右键菜单
-AllObjects = 所有文件系统对象(包括文件、文件夹)的右键菜单
-Computer = 此电脑图标的右键菜单
-RecycleBin = 回收站图标的右键菜单
-Library = 所有库和库目录背景的右键菜单
-New = 所有目录背景和桌面背景的右键 "新建" 的菜单项目
-SendTo = 所有文件系统对象的右键 "发送到" 的菜单项目
-OpenWith = 所有文件右键 "打开方式" 的菜单项目
-WinX = Win10 "开始" 按钮的右键Win+X菜单项目
+File = すべてのファイルタイプの右クリックメニュー
+Folder = すべてのフォルダの右クリックメニュー
+Directory = すべてのファイルディレクトリの右クリックメニュー
+Background = すべてのディレクトリの背景とデスクトップの背景の右クリックメニュー
+Desktop = デスクトップの右クリックメニュー
+Drive = すべてのディスクドライブの右クリックメニュー
+AllObjects = すべてのファイルシステムオブジェクト（ファイルとフォルダーを含む）の右クリックメニュー
+Computer = PCの右クリックメニュー
+RecycleBin = ごみ箱の右クリックメニュー
+Library = すべてのライブラリとライブラリディレクトリの右クリックメニュー
+New = すべてのディレクトリとデスクトップの「新規作成」メニュー
+SendTo = すべてのファイルシステムオブジェクトの「送る」メニュー
+OpenWith = すべてのファイルの「開く」メニュー
+WinX = Win10「スタート」ボタンの右クリックメニュー
 
-LnkFile = 所有快捷方式的右键菜单
-UwpLnk = Win10 UWP应用快捷方式的右键菜单
-ExeFile = 所有EXE可执行文件的右键菜单
-TextFile = 通用文本格式(如.txt、.ini)文件的右键菜单
-ImageFile = 通用图像格式(如.jpg、.png)文件的右键菜单
-VideoFile = 通用视频格式(如.avi、.wmv)文件的右键菜单
-AudioFile = 通用音频格式(如.mp3、.wav)文件的右键菜单
-ImageDirectory = 通用图像文件目录的右键菜单
-VideoDirectory = 通用视频文件目录的右键菜单
-AudioDirectory = 通用音频文件目录的右键菜单
-UnknownType = 所有未关联打开方式的格式文件的右键菜单
-CustomType = 自定义指定格式文件的右键菜单
+LnkFile = すべてのショートカットの右クリックメニュー
+UwpLnk = すべてのWin10 UWPアプリの右クリックメニュー
+ExeFile = すべてのアプリケーションの右クリックメニュー
+TextFile = テキスト形式（.txt、.iniなど）ファイルの右クリックメニュー
+ImageFile = イメージ形式（.jpg、.pngなど）ファイルの右クリックメニュー
+VideoFile = ビデオ形式（.avi、.wmvなど）ファイルの右クリックメニュー
+AudioFile = オーディオ形式（.mp3、.wavなど）ファイルの右クリックメニュー
+ImageDirectory = イメージファイルディレクトリの右クリックメニュー
+VideoDirectory = ビデオファイルディレクトリの右クリックメニュー
+AudioDirectory = オーディオファイルディレクトリの右クリックメニュー
+UnknownType = すべての不明な形式のファイルの右クリックメニュー
+CustomType = 指定のファイル形式の右クリックメニュー
 
-GuidBlocked = 适用于部分顽固的依赖GUID(部分GUID无效)的ShellEx类型项目
-ThirdRules = 程序字典内收录的部分第三方程序内部菜单设置规则
+GuidBlocked = GUIDに依存する頑固なShellExプロジェクトに適しています（一部のGUIDは無効）
+ThirdRules = プログラムディレクトリに含まれる第三者プログラムの内部メニュー設定ルール
 
 [Menu]
-ChangeText = 更改名称
-ItemIcon = 菜单图标
-ChangeIcon = 更改图标
-AddIcon = 添加图标
-DeleteIcon = 删除图标
-ItemPosition = 菜单位置
-SetDefault = 默认
-SetTop = 置顶
-SetBottom = 置底
-OtherAttributes = 其他属性
-OnlyWithShift = 仅在按住Shift键后显示
-OnlyInExplorer = 仅在Explorer窗口显示
-NoWorkingDirectory = 不以当前目录为工作目录
-ShowSeparator = 在此项上方显示分隔线
-Details = 详细信息
-WebSearch = 网页搜索
-ChangeCommand = 更改命令
-FileProperties = 文件属性
-FileLocation = 文件位置
-RegistryLocation = 注册表位置
-Delete = 删除此项
-DeleteReference = 删除引用
-CopyGuid = 复制guid
-InitialData = 初始数据
-Edit = 编辑
+ChangeText =名前を変更
+ItemIcon = アイテムアイコン
+ChangeIcon = アイコンの変更
+AddIcon = アイコンを追加
+DeleteIcon = アイコンを削除
+ItemPosition = アイテムの場所
+SetDefault = デフォルト
+SetTop = トップに置く
+SetBottom = ボトムに置く
+OtherAttributes = その他の属性
+OnlyWithShift = Shiftキーを押した後にのみ表示する
+OnlyInExplorer = エクスプロ—ラ—のみ表示する
+NoWorkingDirectory = カレントディレクトリをワークディレクトリとしない
+ShowSeparator = このアイテムの上に仕切りを表示する
+Details = 詳細情報
+WebSearch = Web検索
+ChangeCommand = コマンドの変更
+FileProperties = ファイル情報
+FileLocation = ファイル位置
+RegistryLocation = レジストリ位置
+Delete = 削除
+DeleteReference = 参照を削除
+CopyGuid = ガイドをコピー
+InitialData = 初期データ
+Edit = 編集
 Save = 保存
 
 [Item]
-Open = 打开(&O)
-Edit = 编辑(&E)
-Explore = 浏览(&X)
-Play = 播放(&L)
-Print = 打印(&P)
+Open = 開く(&O)
+Edit = 編集(&E)
+Explore = 探す(&X)
+Play = 再生(&L)
+Print = 印刷(&P)
 Find = 搜索(&E)...
-Runas = 以管理员身份运行(&A)
-CustomFolder = 自定义文件夹(&F)...
-MapNetworkDrive = 映射网络驱动器(&N)...
-DisconnectNetworkDrive = 断开网络驱动器的连接(&C)...
-RecycleBinProperties = 属性(&R)
-RemovableDrive = 可移动磁盘
-BuildSendtoMenu = 快速构建发送到子菜单
-UseStoreOpenWith = 在Microsoft Store中查找应用
-NewItem = 新建一个菜单项目
-AddGuidBlockedItem = 添加GUID锁定项目
-CurrentExtension = 你当前选择的文件格式为
-EditSubItems = 编辑 "%s" 的子菜单项目
-InvalidItem = 无效菜单项目:
+Runas = 管理者として実行(&A)
+CustomFolder = カスタムフォルダ(&F)...
+MapNetworkDrive = ネットワークドライブをマップする(&N)...
+DisconnectNetworkDrive = ネットワークドライブを切断します(&C)...
+RecycleBinProperties = プロパティ(&R)
+RemovableDrive = リムーバブルディスク
+BuildSendtoMenu = 「送る」サブメニューを作成
+UseStoreOpenWith = Microsoft Storeでアプリを探す
+NewItem = 新しいメニュー項目を作成
+AddGuidBlockedItem = GUIDロックアイテムを追加
+CurrentExtension = 現在選択しているファイル形式は
+EditSubItems = 「％s」のサブメニュー項目を編集
+InvalidItem = 無効なメニュー項目：
 Separator = ◆◆◆◆◆◆◆◆◆◆◆◆◆◆◆◆
 
 [Dialog]
-Ok = 确认
-Cancel = 取消
-Browse = 浏览
-Program = 程序
-NewShellItem = 新建Shell类型右键菜单项目
-NewSendToItem = 新建发送到子菜单项目
-NewOpenWithItem = 新建打开方式菜单项目
-ItemText = 菜单文本
-ItemCommand = 菜单命令
-SingleMenu = 一级
-MultiMenu = 多级
-InputGuid = 输入Guid
-SelectExtension = 请选择一个文件扩展名
-CheckReference = 请勾选你想要添加引用的菜单项目
-CheckCommon = 请勾选你想要添加的常用菜单项目
-SelectSubMenuMode = 当前多级菜单子项目数为0, 你有两个选择:\n①该多级菜单的所有子菜单项目私有,\n②该多级菜单可与其他多级菜单引用相同子项,\n请做出你的选择.
+Ok = 確認
+Cancel = キャンセル
+Browse = ブラウズ
+Program = プログラム
+NewShellItem = 新しい「Shell」タイプの右クリックメニュー項目を作成
+NewSendToItem = 新しい「送る」サブメニューを作成
+NewOpenWithItem = 新しい「開く」メニュー項目を作成
+ItemText = アイテムテキスト
+ItemCommand = 菜アイテムコマンド
+SingleMenu = シングルメニュー
+MultiMenu = マルチメニュー
+InputGuid = ガイドを入力
+SelectExtension = ファイル拡張子を選択してください
+CheckReference = 引用を追加したいメニュー項目をチェックしてください
+CheckCommon = 追加したい一般的なメニュー項目を確認してください
+SelectSubMenuMode = 当現在のマルチレベルメニューのサブ項目数は0です。二つの選択肢がある:\n①このマルチレベルメニューのすべてのサブメニュー項目はプライベートですが、\n②このマルチレベルメニューは、他のマルチレベルメニューと同じサブアイテムを参照できます、\n選択してください。
 
 [MessageBox]
-TextCannotBeEmpty = 菜单文本不能为空!
-CommandCannotBeEmpty = 菜单命令不能为空!
-StringParsingFailed = 本地化字符串解析失败!
-TextLengthCannotExceed80 = 菜单文本过长, 长度不允许超过80!
-ConfirmDeletePermanently = 确认是否永久删除此项?\n此操作无法还原,请谨慎操作!
-ConfirmDeleteReference = 确认是否移除对该项目的引用?
-ConfirmDelete = 确认是否删除该项?
-ConfirmDeleteReferenced = 确认是否永久删除此项?\n所有引用此项的项目都会失效,请谨慎操作!
-CannotAddNewItem = 系统限制子菜单最大项目数为16,\n无法再进行添加!
-UnsupportedFilename = 不支持的文件名,\n可能已经存在相同文件名的菜单项目!
-UnsupportedExtension = 不支持的文件扩展名!
-CannotChangePath = 不允许更改文件路径!
-CopiedToClipboard = 已复制到剪切板:
-UnknownGuid = 未知的Guid!
-HasBeenAdded = 此项目已被添加!
-EditInitialData = 仅支持纯文本文件(如.txt、.bat),\n如需写入二进制数据请自行在注册表中编辑相关类型"Data"键值,\n请确认是否继续编辑？
-PromptIsOpenItem = 该项为"打开"菜单,\n盲目操作可能会导致无法打开文件或文件夹,\n请确认是否继续操作？(不建议)
-RestartApp = 程序将会重新启动!
-UpdateApp = 当前有更新, 是否前往下载?\n更新信息: 版本号
-FileOrFolderNotExists = 文件或文件夹不存在!
+TextCannotBeEmpty = メニューテキストを空にすることはできません！
+CommandCannotBeEmpty = メニューコマンドを空にすることはできません！
+StringParsingFailed = ローカライズされた文字列解析に失敗!
+TextLengthCannotExceed80 = メニューテキストが長すぎます。長さは80を超えることはできません！
+ConfirmDeletePermanently = このアイテムを完全に削除しますか。\nこの操作は復元できません、注意してください!
+ConfirmDeleteReference = プロジェクトへの参照を削除しますか。
+ConfirmDelete = このアイテムを削除しますか。
+ConfirmDeleteReferenced = このアイテムを完全に削除しますか。\nこのアイテムを参照するすべてのアイテムは無効になります、注意してください。
+CannotAddNewItem = システムはサブメニュー項目の最大数を16に制限します、\n追加できません！
+UnsupportedFilename = サポートされていないファイル名、\n同じファイル名のメニュー項目がすでに存在している可能性があります！
+UnsupportedExtension = サポートされていないファイル拡張子！
+CannotChangePath = ファイルパスの変更は許可されていません！
+CopiedToClipboard = クリップボードにコピー：
+UnknownGuid = 不明なGuid！
+HasBeenAdded = このアイテムが追加されました！
+EditInitialData = プレーンテキストファイル（.txt、.batなど）のみをサポートします、\nバイナリデータを書き込む必要がある場合は、レジストリ内の関連するタイプの「Data」キー値を自分で編集してください、\n編集を続けますか。
+PromptIsOpenItem = このアイテムは「開く」メニュー、\n盲目的な操作には、ファイルやフォルダを開くことができなくなる場合があります、\n続行するかどうか。(お勧めしません)
+RestartApp = プログラムが再起動します！
+UpdateApp = 現在アップデートがありますが、ダウンロードしますか。\n更新情報：バージョン番号
+FileOrFolderNotExists = ファイルまたはフォルダーが存在しません！
 
 [Tip]
-RestartExplorer = 重启Explorer会使桌面闪烁片刻, 正常现象无需担心,\n或者你也可以稍后重启或注销计算机使你的操作生效
-CustomFolder = 禁用此项将会同时禁用文件系统\n对象属性面板中的自定义选项卡
-SendToDrive = 仅当插入可移动磁盘时有作用,\n显示该可移动磁盘的所有分区
-BuildSendtoMenu = 禁用此项将加快主菜单弹出速度\n但会延缓发送到子菜单弹出速度
-InvalidItem = 无效菜单项目将导致此项以下的\n所有菜单项目不可见(建议删除)
-EditSubItems = 编辑子菜单项目
-AddExistingItems = 添加对现有项目的引用
-AddSeparator = 添加分隔线
-Separator = 项目分隔线
-AddCommonItems = 添加常用菜单项目
+RestartExplorer = Explorerを再起動すると、デスクトップがしばらくちらつきます。通常の現象を心配する必要はありません、\n後でコンピュータを再起動またはログオフして、操作を有効にすることもできます。
+CustomFolder = このオプションを無効にすると、ファイルシステムオブジェクトのプロパティパネルのカスタムタブも無効になります
+SendToDrive = リムーバブルディスクが挿入されている場合にのみ機能します、\nリムーバブルディスクのすべてのパーティションを表示する
+BuildSendtoMenu = このオプションを無効にすると、メインメニューのポップアップ速度が速くなります、\nただし、サブメニューポップアップへの送信速度が遅くなります
+InvalidItem = メニュー項目が無効な場合、この項目の下にあるすべてのメニュー項目が非表示になります（削除することをお勧めします）
+EditSubItems = サブメニュー項目の編集
+AddExistingItems = 既存のプロジェクトへの参照を追加
+AddSeparator = 仕切りを追加
+Separator = プロジェクトの分割線
+AddCommonItems =よく使うメニュー項目を追加
 
 [Other]
-DictionaryDescription = 字典说明
-LanguageDictionary = 程序语言
-GuidInfosDictionary = GUID信息
-ThridRulesDictionary = 三方规则
-CommonItemsDictionary = 常用菜单
-Translators = 翻译贡献者
-OtherLanguages = 下载或上传其他语言文件
-RestartExplorer = 当前部分操作需要重启文件资源管理器生效
+DictionaryDescription = 辞書説明
+LanguageDictionary = Language
+GuidInfosDictionary = GUID情報
+ThridRulesDictionary = 第三者のルール
+CommonItemsDictionary = 一般メニュー
+Translators = 翻訳者
+OtherLanguages = 他の言語でファイルをダウンロードまたはアップロードする
+RestartExplorer = 現在の一部の操作を有効にするには、ファイルエクスプローラーを再起動する必要があります
 
 AboutApp = 【主要功能】\n 1.管理常见位置右键菜单\n 2.自定义添加右键菜单\n\n【兼容性能】\n 1.适用于Win7、win10，兼容64位和32位系统\n 2.适配高分屏，最佳缩放比为150%\n\n【代码开源】\n 1.代码语言：C Sharp, Winform程序\n 2.Github项目：https://github.com/BluePointLilac/ContextMenuManager \n 3.Gitee项目：https://gitee.com/BluePointLilac/ContextMenuManager \n 4.使用本程序的源代码请遵守MIT开源协议\n\n【联系作者】\n 1.程序由我个人独立开发，当然也要感谢萌研社 @坑晨 平时的答疑解惑，能力有限，\n    难免出现一些Bug，欢迎大家反馈Bug和提出建议\n 2.个人B站ID：蓝点lilac  https://space.bilibili.com/34492771 (欢迎大家关注我!)\n 3.个人邮箱：1617859183@qq.com\n\n【程序图标】\n 1.程序主图标来自 https://www.easyicon.net/1208132-mouse_icon.html \n 2.程序使用到的按钮图标主要来自 https://www.iconfont.cn/ \n\n【程序更新】\n 1.程序有检查更新功能，除了更新程序本身还会更新字典，下载完成后直接覆盖原文件即可\n 2.由于Github Raw被墙，Gitee Raw有每月次数访问上限，程序设置为每月检测一次更新，\n    大家也可以自己浏览Github Releases栏或Gitee 发行版栏检查是否有更新 \n\n【温馨提示】\n 1.一些特殊菜单项可能会受到其他因素影响导致不会显示在右键菜单中，\n    但是按照程序使用的通用规则在此程序中仍会显示为启用，这是正常的现象。\n 2.每个右键管理程序禁用菜单方法可能不同, 建议不要同时使用多个右键菜单管理程序,\n    大部分程序使用简单暴力的备份-删除法, 此程序尽可能使用了系统提供的键值进行隐藏操作,\n    若之前使用过其他程序禁用菜单项，请先使用对应程序还原, 不然可能无法在此程序中看到它。\n 3.此程序不用于清理未卸载干净的程序，但可帮助你定位菜单项相关注册表和文件位置,\n    你可根据相关内容进行你的操作，如果你是一个电脑小白，建议只碰启用\禁用开关。
 
