根据系统日语显示文本修正部分内容

--- a/languages/ja-JP.ini
+++ b/languages/ja-JP.ini
@@ -114,14 +114,14 @@ Save = 保存
 [Item]
 Open = 開く(&O)
 Edit = 編集(&E)
-Explore = 探す(&X)
+Explore = エクスプローラー(&X)
 Play = 再生(&L)
 Print = 印刷(&P)
-Find = 搜索(&E)...
+Find = 検索(&E)...
 Runas = 管理者として実行(&A)
-CustomFolder = カスタムフォルダ(&F)...
-MapNetworkDrive = ネットワークドライブをマップする(&N)...
-DisconnectNetworkDrive = ネットワークドライブを切断します(&C)...
+CustomFolder = このフォルダーのカスタマイズ(&F)...
+MapNetworkDrive = ネットワークドライブの割り当て(&N)...
+DisconnectNetworkDrive = ネットワークドライブの切断(&C)...
 RecycleBinProperties = プロパティ(&R)
 RemovableDrive = リムーバブルディスク
 BuildSendtoMenu = 「送る」サブメニューを作成
