--- a/languages/ja-JP.ini
+++ b/languages/ja-JP.ini
@@ -195,8 +195,8 @@ Translators = 翻訳者
 OtherLanguages = 他の言語でファイルをダウンロードまたはアップロードする
 RestartExplorer = 現在の一部の操作を有効にするには、ファイルエクスプローラーを再起動する必要があります
 
-AboutApp = 【主要功能】\n 1.管理常见位置右键菜单\n 2.自定义添加右键菜单\n\n【兼容性能】\n 1.适用于Win7、8、8.1、10系统\n 2.适用于64位和32位操作系统\n 3.适配高分屏，最佳缩放比为150%\n\n【代码开源】\n 1.代码语言：C Sharp, Winform程序\n 2.Github项目：https://github.com/BluePointLilac/ContextMenuManager \n 3.Gitee项目：https://gitee.com/BluePointLilac/ContextMenuManager \n 4.使用本程序的源代码请遵守MIT开源协议\n\n【联系作者】\n 1.程序由我个人独立开发，当然也要感谢萌研社 @坑晨 平时的答疑解惑，能力有限，\n    难免出现一些Bug，欢迎大家反馈Bug和提出建议\n 2.个人B站ID：蓝点lilac  https://space.bilibili.com/34492771 (欢迎大家关注我!)\n 3.个人邮箱：1617859183@qq.com\n\n【程序图标】\n 1.程序主图标来自 https://www.easyicon.net/1208132-mouse_icon.html \n 2.程序使用到的按钮图标主要来自 https://www.iconfont.cn/ \n\n【程序更新】\n 1.程序有检查更新功能，除了更新程序本身还会更新字典，下载完成后直接覆盖原文件即可\n 2.由于Github Raw被墙，Gitee Raw有每月次数访问上限，程序设置为每月检测一次更新，\n    大家也可以自己浏览Github Releases栏或Gitee 发行版栏检查是否有更新 \n\n【温馨提示】\n 1.一些特殊菜单项可能会受到其他因素影响导致不会显示在右键菜单中，\n    但是按照程序使用的通用规则在此程序中仍会显示为启用，这是正常的现象。\n 2.每个右键管理程序禁用菜单方法可能不同, 建议不要同时使用多个右键菜单管理程序,\n    大部分程序使用简单暴力的备份-删除法, 此程序尽可能使用了系统提供的键值进行隐藏操作,\n    若之前使用过其他程序禁用菜单项，请先使用对应程序还原, 不然可能无法在此程序中看到它。\n 3.此程序不用于清理未卸载干净的程序，但可帮助你定位菜单项相关注册表和文件位置,\n    你可根据相关内容进行你的操作，如果你是一个电脑小白，建议只碰启用\禁用开关。
+AboutApp = 
 
-Dictionaries = 【字典说明】\n 此程序拥有几个字典文件\n 如果想为此程序添加字典可右键保存字典文件, 并按照文件内相关说明进行添加\n 右侧选项卡中为原始字典内容, 你可以切换选项卡进行查看\n\n【字典内容】\n 1.程序显示文本语言字典 (languages目录)\n 2.ShellEx菜单项GUID文本图标字典 (GuidInfosDic.ini)\n 3.第三方程序菜单内部设置字典 (ThirdRulesDic.xml)\n 4.常用菜单项目字典 (ShellCommonDic.xml)
+Dictionaries = 
 
-Donate = 此程序完全免费，如果你觉得这个软件对你有所帮助, 你可以通过扫描\n下方二维码(微信、支付宝、腾讯QQ)进行捐赠, 金额请随意, 谢谢支持！\n也期待你在Github或者Gitee上为此程序项目点亮Star (这对我很重要!)
+Donate = 
