Rewording for clarity

--- a/languages/en-US.ini
+++ b/languages/en-US.ini
@@ -31,9 +31,9 @@ SendTo = Send to
 OpenWith = Open with
 WinX = Win+X
 
-LnkFile = lnk file
-UwpLnk = uwp lnk
-ExeFile = exe
+LnkFile = .lnk file
+UwpLnk = UWP .lnk files
+ExeFile = .exe
 
 TextFile = Text file
 ImageFile = Image file
@@ -48,7 +48,7 @@ CustomExtension = Specific file type
 PerceivedType = Perceived file type
 DirectoryType = Folder type
 
-EnhanceMenu = Enhance menu
+EnhanceMenu = Menu ehancements
 ThirdRules = Third-party rules
 DragDrop = Right-click and drag
 PublicReferences = Public references
@@ -300,10 +300,10 @@ AppDir = Program directory
 OpenConfigDir = Open the directory where the configuration file is located
 AutoBackup = Automatically back up the registry when deleting the menu
 OpenBackupDir = Open the backup folder
-CheckUpdate = Check program and dictionary update
+CheckUpdate = Check for program and dictionary updates
 ImmediatelyCheckUpdate = Check immediately
 ProtectOpenItem = Protect the "Open" menu item
-WebSearchEngine = Search engine used for web search
+WebSearchEngine = Search engine used for web searches
 CustomEngine = Custom
 SetCustomEngine = Define search engine (use %s instead of search keywords) 
 
