Capitalize all UI tabs, consistency reword

--- a/languages/en-US.ini
+++ b/languages/en-US.ini
@@ -10,8 +10,8 @@ AppName = Windows Context Menu Manager
 
 [ToolBar]
 Home = Home
-Type = File type
-Rule = Other rules
+Type = File Type Rules
+Rule = Other Rules
 Refresh = Refresh
 About = About
 
@@ -67,11 +67,11 @@ File = Context menu for all file types
 Folder = Context menu for all folder types
 Directory = Context menu for all file folders
 Background = Context menu for all folder backgrounds and desktop backgrounds
-Desktop = Desktop context menu
+Desktop = Context menu for the Desktop
 Drive = Context menu for all disk drives
 AllObjects = Context menu for all file system objects (including files and folders)
-Computer = This PC context menu
-RecycleBin = Recycle Bin context Menu
+Computer = Context menu for This PC
+RecycleBin = Context menu for the Recycle Bin
 Library = Context menu for all Libraries and Library folder background
 New = "New" menu for the context menu for folder and desktop background
 SendTo = "Send to" menu for all file system objects
@@ -131,7 +131,7 @@ RegistryLocation = Registry location
 ExportRegistry = Export registry
 Delete = Delete item
 DeleteReference = Delete reference
-HandleGuid = handle GUID
+HandleGuid = GUID actions
 CopyGuid = Copy GUID
 BlockGuid = Block GUID
 AddGuidDic = Add GUID dictionary
