--- a/languages/en-US.ini
+++ b/languages/en-US.ini
@@ -66,7 +66,7 @@ Donate = Donate to the author
 File = Context menu for all file types
 Folder = Context menu for all folder types
 Directory = Context menu for all file folders
-Background = Context menu for all folder backgrounds and desktop backgrounds
+Background = Context menu for all folder and desktop backgrounds
 Desktop = Context menu for the Desktop
 Drive = Context menu for all disk drives
 AllObjects = Context menu for all file system objects (including files and folders)
@@ -85,7 +85,7 @@ ExeFile = Context menu for .exe executable files
 TextFile = Context menu for text files (.txt, .ini, etc.)
 ImageFile = Context menu for image files (.jpg, .png, etc.)
 VideoFile = Context menu for video files (.avi, .wmv, etc.)
-AudioFile = Context menu for audio format files (.mp3, .wav, etc.)
+AudioFile = Context menu for audio files (.mp3, .wav, etc.)
 ImageDirectory = Context menu for image file folders
 VideoDirectory = Context menu for video file folders
 AudioDirectory = Context menu for audio file folders
@@ -298,10 +298,10 @@ ConfigPath = Save location of configuration and data files
 AppDataDir = AppData directory
 AppDir = Program directory
 OpenConfigDir = Open the directory where the configuration file is located
-AutoBackup = Automatically back up the registry when deleting the menu
+AutoBackup = Automatically back up the registry when deleting menus
 OpenBackupDir = Open the backup folder
 CheckUpdate = Check for program and dictionary updates
-ImmediatelyCheckUpdate = Check immediately
+ImmediatelyCheckUpdate = Check now
 ProtectOpenItem = Protect the "Open" menu item
 WebSearchEngine = Search engine used for web searches
 CustomEngine = Custom
