Clearer explanation of ShowFilePath
Makes it clear that the file path is shown in the status bar on mouse hover

--- a/languages/en-US.ini
+++ b/languages/en-US.ini
@@ -174,7 +174,7 @@ CurrentExtension = The currently selected file extension is %s
 CurrentPerceivedType = The currently selected perceived file type is %s
 CurrentDirectoryType = The currently selected perceived folder type is %s
 WinXSortable = Enable WinX menu sorting function
-ShowFilePath = Real-time display of the file path in the status bar
+ShowFilePath = Show file path of item in status bar on hover
 OpenMoreRegedit = Allow the registry editor to open more
 
 [Dialog]
