修复bug, 优化代码

--- a/languages/en-US.ini
+++ b/languages/en-US.ini
@@ -10,7 +10,7 @@ AppName = Windows Context Menu Manager
 
 [ToolBar]
 Home = Home
-Type = File Type Rules
+Type = File Types
 Rule = Other Rules
 Refresh = Refresh
 About = About
@@ -32,8 +32,8 @@ OpenWith = Open with
 WinX = Win+X
 
 LnkFile = .lnk file
-UwpLnk = UWP .lnk files
-ExeFile = .exe
+UwpLnk = UWP .lnk
+ExeFile = .exe files
 
 TextFile = Text file
 ImageFile = Image file
@@ -142,43 +142,8 @@ RestoreDefault = Restore default
 Edit = Edit
 Save = Save
 
-[Item]
-Open = Open (& O)
-Edit = Edit (& E)
-Explore = Explorer (& X)
-Play = Play (& L)
-Print = Print (& P)
-Find = Find (& E) ...
-Runas = Run as administrator (& A)
-CustomFolder = Customize this folder (& F) ...
-MapNetworkDrive = Map Network Drive (& N) ...
-DisconnectNetworkDrive = Disconnect Network Drive (& C) ...
-RecycleBinProperties = Properties (& R)
-RemovableDrive = Removable Disk
-BuildSendtoMenu = Create "Send to" submenu
-UseStoreOpenWith = Find apps in Microsoft Store
-ShareWithSkype = Share using Skype
-NewItem = Create new menu item
-AddGuidBlockedItem = Add GUID blocked item
-
-CurrentExtension = The currently selected file type is
-
-LockNewMenu = Lock the new menu
-EditSubItems = Edit sub-menu items for "% s"
-InvalidItem = Invalid menu item:
-Separator = ◆◆◆◆◆◆◆◆◆◆◆◆◆◆◆◆◆
-SelectExtension = Please select a file extension
-SelectPerceivedType = Please select a perceived file type
-SelectDirectoryType = Please select a perceived folder type
-CurrentExtension = The currently selected file extension is %s
-CurrentPerceivedType = The currently selected perceived file type is %s
-CurrentDirectoryType = The currently selected perceived folder type is %s
-WinXSortable = Enable WinX menu sorting function
-ShowFilePath = Show file path of item in status bar on hover
-OpenMoreRegedit = Allow the registry editor to open more
-
 [Dialog]
-Ok = Confirm
+Ok = OK
 Cancel = Cancel
 Browse = Browse
 Program = Program
@@ -214,12 +179,12 @@ DocumentDirectory = Document folder
 ImageDirectory = Image folder
 VideoDirectory = Video folder
 AudioDirectory = Audio folder
-
 CheckReference = Check the menu item to which you want to add a reference to
-
 CheckCommon = Check the common menu items you want to add
-
 CheckCopy = Check the menu item you want to copy
+SelectExtension = Please select a file extension
+SelectPerceivedType = Please select a perceived file type
+SelectDirectoryType = Please select a perceived folder type
 SelectGroup = Select to save the group
 SelectSubMenuMode = The number of sub-items in the current multi-level menu is 0. There are two choices:\n① All sub-menu items in this multi-level menu are private (recommended),\n② The multi-level menu can reference the same sub-items as other multi-level menus.\nDemanding choice...
 
@@ -240,7 +205,6 @@ NoOpenModeExtension = There is no app associated with this extension.\nRight-cli
 CannotChangePath = File path changes are not allowed!
 CopiedToClipboard = Copy to clipboard:
 MalformedGuid = GUID with incorrect format
-
 UnknownGuid = Unknown GUID!
 
 HasBeenAdded = This item has been added!
@@ -278,12 +242,38 @@ LockNewMenu = Once enabled, it can prevent third-party programs from adding item
 CheckUpdate = The program automatically looks for updates once a month (when the program is started)\nYou can manually click to browse Github, Gitee to check for updates
 LastCheckUpdateTime = Last automatic update check time:
 OpenLanguagesDir = Open language folder
+OtherLanguages ​​= Download or upload files in other languages
 OpenDictionariesDir = Open dictionary folder
 ConfigPath = After changing the configuration and data file save path,\nsome of the enhanced menus that have been enabled will become invalid.\nThey can be re-enabled in the enhanced menu
 CommandFiles = This command depends on the configuration file. Moving the configuration file location will cause this menu item to become invalid. Re-enable it.
 CreateGroup = Create a new group
 
 [Other]
+Open = &Open
+Edit = &Edit
+Explore = E&xplorer
+Play = P&lay
+Print = &Print
+Find = Find(&E)...
+Runas = Run as &administrator
+CustomFolder = Customize this &folder...
+MapNetworkDrive = Map &Network Drive...
+DisconnectNetworkDrive = Disconnect Network Drive(&C) ...
+RecycleBinProperties = Properties(&R)
+RemovableDrive = Removable Disk
+BuildSendtoMenu = Create "Send to" submenu
+UseStoreOpenWith = Find apps in Microsoft Store
+ShareWithSkype = Share using Skype
+NewItem = Create new menu item
+AddGuidBlockedItem = Add GUID blocked item
+CurrentExtension = The currently selected file type is
+LockNewMenu = Lock the new menu
+EditSubItems = Edit sub-menu items for "% s"
+InvalidItem = Invalid menu item:
+Separator = >>>>>> Separator <<<<<<
+CurrentExtension = The currently selected file extension is %s
+CurrentPerceivedType = The currently selected perceived file type is %s
+CurrentDirectoryType = The currently selected perceived folder type is %s
 RestartExplorer = Explorer must be restarted for the changes to take effect.
 DictionaryDescription = Dictionary description
 LanguageDictionary = Language
@@ -291,7 +281,6 @@ GuidInfosDictionary = GUID information
 ThridRulesDictionary = Third-party rules
 CommonItemsDictionary = Common Menu
 Translators = Translators
-OtherLanguages ​​= Download or upload files in other languages
 
 DonationList = Donation list
 ConfigPath = Save location of configuration and data files
@@ -306,9 +295,12 @@ ProtectOpenItem = Protect the "Open" menu item
 WebSearchEngine = Search engine used for web searches
 CustomEngine = Custom
 SetCustomEngine = Define search engine (use %s instead of search keywords) 
+WinXSortable = Enable WinX menu sorting function
+ShowFilePath = Show file path of item in status bar on hover
+OpenMoreRegedit = Allow the registry editor to open more
 
 AboutApp = [Main function]\n 1. Manage common location context menu\n 2. Customize and add context menu\n\n[Compatibility]\n 1. Suitable for Win7, 8, 8.1, 10, Vista\n 2. Suitable For x64, x32 CPU operating system\n 3. Adapt to high resolution screens, the best zoom ratio is 150%\n\n[Open source code]\n 1. Code language: C#, Winform program\n 2. GitHub project: https://github.com/BluePointLilac/ContextMenuManager\n 3. Gitee project: https://gitee.com/BluePointLilac/ContextMenuManager\n\n[Contact Author]\n 1. The program is developed by myself, yet I of course also want to thank Meng Yanshe @ Kengchen for answering questions in normal times, since my ability for this is limited.\n There are inevitably some bugs, and everyone is welcome to leave feedback and make suggestions\n 2. Personal B station: https://space.bilibili.com/34492771 (I welcome everyone to follow me!)\n 3. QQ mailbox: 1617859183@qq.com\n\n[Resource Reference]\n 1. The main program icon comes from: https://www.easyicon.net/1208132-mouse_icon.html\n 2. Program button icons are mainly from the Alibaba vector icon library: https://www.iconfont.cn/\n 3. WinX HashLnk (Rafael Rivera): https://github.com/riverar/hashlnk\n\n[Program update]\n 1. The program has a check and update function. In addition to updating the program itself, it also updates the dictionary. After the download is complete, you can directly overwrite the original file.\n 2. Because GitHub Raw is walled and Gitee Raw has a monthly access limit, the program is set to check for updates once a month.\n You can also browse the GitHub Releases column or the Gitee release column to check if there are updates\n\n[Warm Tips]\n 1. Some special menu items may be affected by other factors, they will not be displayed in the context menu.\n However, they will still be displayed as enabled in this program according to the general rules used by the program. This is normal.\n 2. The method of disabling the menu for each context menu management program may be different. It is recommended not to use multiple context menu management programs at the same time.\n Most programs use a simple and violent backup-delete method. This program uses the key values ​​provided by the system to hide operations as much as possible.\n If you have used other programs to disable the menu item before, please use the corresponding program to restore it, otherwise you may not be able to see it in this program.\n 3. This program is not used to clean up programs that have not been uninstalled, but it can help you locate the registry and file locations of the menu items.\n You can perform your operations according to the relevant content. If you are a computer novice, you are recommended to only touch the enable\disable switch. 
 
 Dictionaries = [Dictionary description]\n This program has several dictionary files, and each dictionary has a user dictionary and a network dictionary.\n If you want to add a dictionary to this program, you can right-click to save the file and follow the instructions in the file to add it.\n Send your dictionary to my email or submit it to GitHub to make your contribution to this project.\n The right tab is the original dictionary content, you can switch the tab to view it\n\n[Dictionary content]\n 1. Program display text language dictionary (Languages directory)\n 2. ShellEx menu item GUID text icon dictionary (GuidInfosDic.ini)\n 3. Third-party program menu internal setting dictionary (ThirdRulesDic.xml)\n 4. Enhanced menu items Dictionary (EnhanceMenusDic.xml) 
 
-Donate = This program is completely free. If you find this software helpful, you can donate by scanning the QR code below\n (WeChat, Alipay, Tencent QQ). The amount is up to you. Thank you for your support! \nI also hope you consider starring this program's project on Github or Gitee (this means a lot to me!)
+Donate = This program is completely free. If you find this software helpful,\nyou can donate by scanning the QR code below (WeChat, Alipay, Tencent QQ).\nThe amount is up to you. Thank you for your support! I also hope you consider \nstarring this program's project on Github or Gitee (this means a lot to me!).
