--- a/languages/ja-JP.ini
+++ b/languages/ja-JP.ini
@@ -12,6 +12,7 @@ AppName = Windows右ボタン管理
 Home = ホーム
 Type = ファイルタイプ
 Rule = 他のルール
+Refresh = リフレッシュ
 About = ヘルプ
 
 [SideBar]
@@ -33,15 +34,8 @@ WinX = Win+X
 LnkFile = lnkファイル
 UwpLnk = uwp lnk
 ExeFile = アプリケーション
-TextFile = テキストファイル
-ImageFile = イメージファイル
-VideoFile = ビデオファイル
-AudioFile = オーディオファイル
-ImageDirectory = イメージディレクトリ
-VideoDirectory = ビデオディレクトリ
-AudioDirectory = オーディオディレクトリ
 UnknownType = 不明な形式
-CustomType = カスタムフォーマット
+CustomExtension = カスタムフォーマット
 
 GuidBlocked = GUIDロック
 ThirdRules = 第三者のルール
@@ -111,28 +105,6 @@ InitialData = 初期データ
 Edit = 編集
 Save = 保存
 
-[Item]
-Open = 開く(&O)
-Edit = 編集(&E)
-Explore = エクスプローラー(&X)
-Play = 再生(&L)
-Print = 印刷(&P)
-Find = 検索(&E)...
-Runas = 管理者として実行(&A)
-CustomFolder = このフォルダーのカスタマイズ(&F)...
-MapNetworkDrive = ネットワークドライブの割り当て(&N)...
-DisconnectNetworkDrive = ネットワークドライブの切断(&C)...
-RecycleBinProperties = プロパティ(&R)
-RemovableDrive = リムーバブルディスク
-BuildSendtoMenu = 「送る」サブメニューを作成
-UseStoreOpenWith = Microsoft Storeでアプリを探す
-NewItem = 新しいメニュー項目を作成
-AddGuidBlockedItem = GUIDロックアイテムを追加
-CurrentExtension = 現在選択しているファイル形式は
-EditSubItems = 「％s」のサブメニュー項目を編集
-InvalidItem = 無効なメニュー項目：
-Separator = ◆◆◆◆◆◆◆◆◆◆◆◆◆◆◆◆
-
 [Dialog]
 Ok = 確認
 Cancel = キャンセル
@@ -146,9 +118,16 @@ ItemCommand = 菜アイテムコマンド
 SingleMenu = シングルメニュー
 MultiMenu = マルチメニュー
 InputGuid = ガイドを入力
-SelectExtension = ファイル拡張子を選択してください
+TextFile = テキストファイル
+ImageFile = イメージファイル
+VideoFile = ビデオファイル
+AudioFile = オーディオファイル
+ImageDirectory = イメージディレクトリ
+VideoDirectory = ビデオディレクトリ
+AudioDirectory = オーディオディレクトリ
 CheckReference = 引用を追加したいメニュー項目をチェックしてください
 CheckCommon = 追加したい一般的なメニュー項目を確認してください
+SelectExtension = ファイル拡張子を選択してください
 SelectSubMenuMode = 当現在のマルチレベルメニューのサブ項目数は0です。二つの選択肢がある:\n①このマルチレベルメニューのすべてのサブメニュー項目はプライベートですが、\n②このマルチレベルメニューは、他のマルチレベルメニューと同じサブアイテムを参照できます、\n選択してください。
 
 [MessageBox]
@@ -184,15 +163,35 @@ AddExistingItems = 既存のプロジェクトへの参照を追加
 AddSeparator = 仕切りを追加
 Separator = プロジェクトの分割線
 AddCommonItems =よく使うメニュー項目を追加
+OtherLanguages = 他の言語でファイルをダウンロードまたはアップロードする
 
 [Other]
+Open = 開く(&O)
+Edit = 編集(&E)
+Explore = エクスプローラー(&X)
+Play = 再生(&L)
+Print = 印刷(&P)
+Find = 検索(&E)...
+Runas = 管理者として実行(&A)
+CustomFolder = このフォルダーのカスタマイズ(&F)...
+MapNetworkDrive = ネットワークドライブの割り当て(&N)...
+DisconnectNetworkDrive = ネットワークドライブの切断(&C)...
+RecycleBinProperties = プロパティ(&R)
+RemovableDrive = リムーバブルディスク
+BuildSendtoMenu = 「送る」サブメニューを作成
+UseStoreOpenWith = Microsoft Storeでアプリを探す
+NewItem = 新しいメニュー項目を作成
+AddGuidBlockedItem = GUIDロックアイテムを追加
+CurrentExtension = 現在選択しているファイル形式は
+EditSubItems = 「％s」のサブメニュー項目を編集
+InvalidItem = 無効なメニュー項目：
+Separator = >>>>>> プロジェクトの分割線 <<<<<<
 DictionaryDescription = 辞書説明
 LanguageDictionary = Language
 GuidInfosDictionary = GUID情報
 ThridRulesDictionary = 第三者のルール
 CommonItemsDictionary = 一般メニュー
 Translators = 翻訳者
-OtherLanguages = 他の言語でファイルをダウンロードまたはアップロードする
 RestartExplorer = 現在の一部の操作を有効にするには、ファイルエクスプローラーを再起動する必要があります
 
 AboutApp = 
