--- a/ContextMenuManager/Properties/Resources.resx
+++ b/ContextMenuManager/Properties/Resources.resx
@@ -142,6 +142,9 @@
   <data name="Donate" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\images\donate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="DownLoad" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\images\download.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="EnhanceMenusDic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\texts\enhancemenusdic.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
@@ -186,6 +189,9 @@
   </data>
   <data name="ThirdRulesDic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\texts\thirdrulesdic.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="Translate" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\images\translate.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="TurnOff" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\images\turnoff.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
