优化部分代码，添加翻译功能

--- a/languages/en-US.ini
+++ b/languages/en-US.ini
@@ -18,7 +18,7 @@ About = About
 [SideBar]
 File = File
 Folder = Folder
-Directory = File directory
+Directory = Directory
 Background = Background
 Desktop = Desktop
 Drive = Disk
