--- a/languages/zh-CN.ini
+++ b/languages/zh-CN.ini
@@ -1,4 +1,4 @@
-;此文件为 ContextMenuManager Windows右键管理程序 的显示文本字典
+﻿;此文件为 ContextMenuManager Windows右键管理程序 的显示文本字典
 ;翻译：可帮助作者为此程序提供翻译并提交到Github，以下内容中等号右侧内容替换为翻译文本，
 ;General-Translator为翻译贡献者，General-Language为语言名称，如en-US 美国英语
 ;翻译文件保存在Config\languages目录中，文件名保存为en-US.ini
@@ -159,6 +159,10 @@ SelectDirectoryType = 请选择一个目录感知类型
 SelectGroup = 请选择保存分组
 SelectNewItemType = 请选择新建菜单类型
 SelectSubMenuMode = 该多级菜单子项目数为0, 你有两个选择:\n①该多级菜单的所有子菜单项目私有(推荐),\n②该多级菜单可与其他多级菜单引用相同子项,\n请做出你的选择......
+TranslateTool = 翻译器
+DefaultText = 默认文本
+OldTranslation = 旧译文
+NewTranslation = 新译文
 
 [MessageBox]
 TextCannotBeEmpty = 菜单文本不能为空!
